syntax = "proto3";

package hazkey.config;

message FileHash {
    enum ConfigFileType {
        CONFIG_MAIN = 0;
        INPUT_TABLE = 1;
    }

    string name = 1;
    string sha256sum = 2;
    ConfigFileType type = 3;
}

message InputTable {
    string name = 1;
    bool is_built_in = 2;
    string filename = 3;
}

message Profile {
    enum AutoConvertMode {
        AUTO_CONVERT_MODE_UNSPECIFIED = 0;
        AUTO_CONVERT_DISABLED = 1;
        AUTO_CONVERT_ALWAYS = 2;
        AUTO_CONVERT_FOR_MULTIPLE_CHARS = 3;
    }

    enum AuxTextMode {
        AUX_TEXT_MODE_UNSPECIFIED = 0;
        AUX_TEXT_DISABLED = 1;
        AUX_TEXT_SHOW_ALWAYS = 2;
        AUX_TEXT_SHOW_WHEN_CURSOR_NOT_AT_END = 3;
    }

    enum SuggestionListMode {
        SUGGESTION_LIST_MODE_UNSPECIFIED = 0;
        SUGGESTION_LIST_DISABLED = 1;
        SUGGESTION_LIST_SHOW_NORMAL_RESULTS = 2;
        SUGGESTION_LIST_SHOW_PREDICTIVE_RESULTS = 3;
    }

    message SpecialConversionMode {
        bool comma_separated_number = 1;
        bool mail_domain = 2;
        bool calender = 3;
        bool time = 4;
        bool roman_typography = 5;
        bool unicode_codepoint = 6;
        bool hazkey_version = 7;
        bool halfwidth_katakana = 50;
        bool extended_emoji = 51;
    }

    message EnabledInputTable {
        string name = 1;
        bool is_built_in = 2;
        string filename = 3;
    }

    message ZenzaiVersionConfig {
        message V1 {}

        message V2 {
            string profile = 1;
        }

        message V3 {
            string profile = 1;
            string topic = 2;
            string style = 3;
            string preference = 4;
        }

        oneof version {
            V1 v1 = 1;
            V2 v2 = 2;
            V3 v3 = 3;
        }
    }

    string profile_name = 5;
    string profile_id = 6;

    bool use_default_input_ui_settings = 10;
    AutoConvertMode auto_convert_mode = 11;
    AuxTextMode aux_text_mode = 12;
    SuggestionListMode suggestion_list_mode = 13;
    bool use_rich_suggestion = 14;
    int32 num_suggestions = 15;

    bool use_default_conversion_ui_settings = 20;
    int32 num_candidates_per_page = 21;
    bool use_rich_candidates = 22;

    bool use_default_history_settings = 30;
    bool use_profile_independent_history = 31;
    bool use_input_history = 32;
    bool stop_store_new_history = 23;

    bool use_default_special_conversion_settings = 40;
    SpecialConversionMode special_conversion_mode = 41;

    bool use_default_table_settings = 50;
    repeated InputTable enabled_tables = 51;

    bool use_default_zenzai_settings = 100;
    bool zenzai_enable = 101;
    int32 zenzai_infer_limit = 102;
    bool zenzai_contextual_mode = 103;
    ZenzaiVersionConfig zenzai_version_config = 104;
    bool use_zenzai_custom_weight = 105;
    string zenzai_weight_path = 106;
}

// Request messages

message GetConfig {}

message SetConfig {
    repeated FileHash file_hashes = 1;
    repeated Profile profiles = 2;
}

message GetDefaultProfile {}

message ClearAllHistory {
    string profile_id = 1;
}

// Response messages

message CurrentConfig {
    repeated FileHash file_hashes = 1;
    repeated Profile profiles = 2;
    repeated InputTable available_tables = 3;
    bool is_zenzai_available = 4;
    string xdg_config_home_path = 5;
}
