syntax = "proto3";

package hazkey.commands;

// Request messages

// TODO: remove this, read directly from config file.
message SetConfig {
    bool zenzai_enabled = 1;
    int32 zenzai_infer_limit = 2;
    int32 number_fullwidth = 3;
    int32 symbol_fullwidth = 4;
    int32 period_style = 5;
    int32 comma_style = 6;
    int32 space_fullwidth = 7;
    int32 ten_combining = 8;
    string profile_text = 9;
}

message NewComposingText {}

message SetContext {
    string context = 1;
    int32 anchor = 2;
}

message InputChar {
    string text = 1;
    bool is_direct = 2;
}

message MoveCursor {
    int32 offset = 1;
}

message PrefixComplete {
    int32 index = 1;
}

message DeleteLeft {}

message DeleteRight {}

message GetComposingString {
    enum CharType {
        HIRAGANA = 0;
        KATAKANA_FULL = 1;
        KATAKANA_HALF = 2;
        ALPHABET_FULL = 3;
        ALPHABET_HALF = 4;
    }

    CharType char_type = 1;
    string current_preedit = 2;
}

message GetHiraganaWithCursor {}

message GetCandidates {
    bool is_predict_mode = 1;
    int32 n_best = 2;
}

// Response messages

message Text {
    string text = 3;
}

message CandidatesResult {
    message Candidate {
        string text = 1;
        string sub_hiragana = 2;
        bool live_compat = 3;
    }

    repeated Candidate candidates = 1;
    string live_text = 2;  // unused
}
